tests/paczka1/small_fuzzy/78547425.err
Error in line 7: FRQP S186 53,9
Error in line 6: oPVqDVB S708 46,7
Error in line 9: FRQP A301 85,1
Error in line 8: iT5E S708 106,2
